objects/X9902Agency__c.object
<CustomObject>
    <description>To store unique identifier for each agency.</description>
    <fields>
        <fullName>AgencyColonias__c</fullName>
        <description>Indicates whether the agency serves colonias communities.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the agency serves colonias communities, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Agency Colonias</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyCounselingBudget__c</fullName>
        <description>The budget allocated for counseling services provided by the agency.</description>
        <inlineHelpText>Enter the budget allocated for counseling services provided by the agency.</inlineHelpText>
        <label>Agency Counseling Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgencyCounselingMethods__c</fullName>
        <description>The methods or approaches used by the agency for counseling services.</description>
        <inlineHelpText>Enter the methods or approaches used by the agency for counseling services.</inlineHelpText>
        <label>Agency Counseling Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Face to Face Counseling</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Phone Counseling</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Internet Counseling</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Group Counseling</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Video Conference</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other Counseling</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Phone Counseling Only</label>
                </value>
                <value>
                    <fullName>-----------</fullName>
                    <isActive>false</isActive>
                    <label>-----------</label>
                </value>
                <value>
                    <fullName>zzzzzzzz</fullName>
                    <isActive>false</isActive>
                    <label>zzzzzzzz</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyEIN__c</fullName>
        <description>EIN assigned to the agency for tax purposes.</description>
        <inlineHelpText>EIN assigned to the agency</inlineHelpText>
        <label>Agency EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyFaithBase__c</fullName>
        <description>Indicates whether the agency is faith-based.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the agency is faith-based, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Agency Faith Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyLanguages__c</fullName>
        <description>The languages spoken by the agency&apos;s staff or offered for counseling services.</description>
        <inlineHelpText>Enter the languages spoken by the agency&apos;s staff or offered for counseling services.</inlineHelpText>
        <label>Agency Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Cambodian</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Cantonese</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Chinese Mandarin</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Hindi</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Swahili</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Vietnamese</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Farsi</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ASL</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Hmong</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Creole</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>-------------</fullName>
                    <isActive>false</isActive>
                    <label>-------------</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyMailingAddressCity__c</fullName>
        <description>The city where the agency receives mail.</description>
        <inlineHelpText>Enter the city where the agency receives mail if different from the physical location.</inlineHelpText>
        <label>Agency Mailing Address City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingAddressLine1__c</fullName>
        <description>The first line of the mailing address of the agency.</description>
        <inlineHelpText>Enter the first line of the mailing address of the agency if different from the physical address.</inlineHelpText>
        <label>Agency Mailing Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingAddressLine2__c</fullName>
        <description>The second line of the mailing address of the agency (if applicable).</description>
        <inlineHelpText>Enter the second line of the mailing address of the agency if needed.</inlineHelpText>
        <label>Agency Mailing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingAddressState__c</fullName>
        <description>The state where the agency receives mail.</description>
        <inlineHelpText>Select the state where the agency receives mail from the dropdown list if different from the physical location.</inlineHelpText>
        <label>Agency Mailing Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyMailingAddressZipCode__c</fullName>
        <description>The ZIP code of the mailing address of the agency.</description>
        <inlineHelpText>Enter the ZIP code of the mailing address of the agency if different from the physical location.</inlineHelpText>
        <label>Agency Mailing Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMigrantFarmWorkers__c</fullName>
        <description>Indicates whether the agency serves migrant farm workers.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the agency serves migrant farm workers, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Agency Migrant Farm Workers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyName__c</fullName>
        <description>The name of the agency.</description>
        <inlineHelpText>Enter the name of the agency.</inlineHelpText>
        <label>Agency Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyPhysicalAddressCity__c</fullName>
        <description>The city where the agency is physically located.</description>
        <inlineHelpText>Enter the city where the agency is physically located.</inlineHelpText>
        <label>Agency Physical Address City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyPhysicalAddressLine1__c</fullName>
        <description>The first line of the physical address of the agency.</description>
        <inlineHelpText>Enter the first line of the physical address of the agency.</inlineHelpText>
        <label>Agency Physical Address Line 1 </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyPhysicalAddressState__c</fullName>
        <description>The state where the agency is physically located.</description>
        <inlineHelpText>Select the state where the agency is physically located from the dropdown list.</inlineHelpText>
        <label>Agency Physical Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyPhysicalAddressZipCode__c</fullName>
        <description>The ZIP code of the physical address of the agency.</description>
        <inlineHelpText>Enter the ZIP code of the physical address of the agency.</inlineHelpText>
        <label>Agency Physical Address Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyRural__c</fullName>
        <description>Indicates whether the agency serves rural areas.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the agency serves rural areas, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Agency Rural</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyTollFreePhoneNumber__c</fullName>
        <description>Toll-free phone number for contacting the agency.</description>
        <inlineHelpText>Enter the toll-free phone number for contacting the agency if applicable.</inlineHelpText>
        <label>Agency Toll Free Phone Number </label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AgencyUEI__c</fullName>
        <label>Agency UEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyUrban__c</fullName>
        <description>Indicates whether the agency serves urban areas.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the agency serves urban areas, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Agency Urban </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyWebSite__c</fullName>
        <description>Represents the website address of the agency.</description>
        <inlineHelpText>Enter the website address (URL) of the agency.</inlineHelpText>
        <label>Agency Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AgencysDunnsNumber__c</fullName>
        <description>Unique identification number assigned to the agency Dunn.</description>
        <inlineHelpText>Enter the Dunn&apos;s Number assigned to the agency</inlineHelpText>
        <label>Agency’s Dunn’s Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencysFAXnumber__c</fullName>
        <description>The fax number of the agency.</description>
        <inlineHelpText>Enter the fax number of the agency if applicable.</inlineHelpText>
        <label>Agency’s FAX number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AgencysOfficeEmailAddress__c</fullName>
        <description>The email address for contacting the agency&apos;s office.</description>
        <inlineHelpText>Enter the email address for contacting the agency&apos;s office.</inlineHelpText>
        <label>Agency’s Office Email Address </label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AgencysOfficePhoneNumber__c</fullName>
        <description>The primary phone number of the agency&apos;s office.</description>
        <inlineHelpText>Enter the primary phone number of the agency&apos;s office.</inlineHelpText>
        <label>Agency’s Office Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactAddress1__c</fullName>
        <label>Contact Address1 </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAddress2__c</fullName>
        <label>Contact Address2 </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCity__c</fullName>
        <label>Contact City </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactExtensionNumber__c</fullName>
        <label>Contact Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFAXNumber__c</fullName>
        <label>Contact FAX Number </label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMiddleName__c</fullName>
        <label>Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobileNumber__c</fullName>
        <label>Contact Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPhoneNumber__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactState__c</fullName>
        <label>Contact State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>AK</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>AL</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>AR</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>AZ</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>CO</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>DC</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>FL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>FM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>GA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>HI</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>IL</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>IN</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>KS</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>KY</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>LA</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>MA</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ME</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>MH</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>MI</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>MN</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>MO</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>MP</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>MS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactTitle__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactZipCode__c</fullName>
        <label>Contact Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementType__c</fullName>
        <label>Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9902__c</fullName>
        <label>9902</label>
        <referenceTo>X9902__c</referenceTo>
        <relationshipLabel>9902 Agency</relationshipLabel>
        <relationshipName>X9902_Agency</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>9902 Agency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AgencyName__c</columns>
        <columns>AgencyWebSite__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AgencyMailingAddressCity__c</columns>
        <columns>AgencyMailingAddressLine1__c</columns>
        <columns>AgencyMailingAddressLine2__c</columns>
        <columns>AgencyMailingAddressState__c</columns>
        <columns>AgencyMailingAddressZipCode__c</columns>
        <columns>AgencyMigrantFarmWorkers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>99-{00000}</displayFormat>
        <label>9902 Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9902 Agency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>